# mac-doc-hyprland

./: .coderabbit.yaml  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml  install.sh  sonar-project.properties
.github/actions/setup-gtk4/: action.yml
.github/workflows/: audit.yml  clippy.yml  codeql.yml  deny.yml  test.yml
.scannerwork/: report-task.txt
crates/dock-common/: Cargo.toml
crates/dock-common/src/: error.rs  launch.rs  lib.rs  pinning.rs  signals.rs  singleton.rs
crates/dock-common/src/compositor/: hyprland.rs  mod.rs  sway.rs  traits.rs  types.rs
crates/dock-common/src/config/: css.rs  mod.rs  paths.rs
crates/dock-common/src/desktop/: categories.rs  dirs.rs  entry.rs  icons.rs  mod.rs  preferred_apps.rs
crates/dock-common/src/hyprland/: events.rs  ipc.rs  types.rs
crates/mac-dock/: Cargo.toml
crates/mac-dock/src/: config.rs  context.rs  dock_windows.rs  events.rs  listeners.rs  main.rs  monitor.rs  rebuild.rs  state.rs
crates/mac-dock/src/ui/: buttons.rs  css.rs  dock_box.rs  dock_menu.rs  drag.rs  hotspot.rs  menus.rs  mod.rs  window.rs
crates/mac-drawer/: Cargo.toml
crates/mac-drawer/src/: config.rs  desktop_loader.rs  listeners.rs  main.rs  state.rs  watcher.rs
crates/mac-drawer/src/ui/: app_grid.rs  categories.rs  constants.rs  file_search.rs  math.rs  mod.rs  pinned.rs  power_bar.rs  search_handler.rs  well_builder.rs  widgets.rs
crates/mac-notifications/: Cargo.toml
crates/mac-notifications/src/: config.rs  dbus.rs  listeners.rs  main.rs  notification.rs  persistence.rs  state.rs  waybar.rs
crates/mac-notifications/src/assets/: notifications.css
crates/mac-notifications/src/ui/: constants.rs  css.rs  dnd_menu.rs  icons.rs  mod.rs  notification_row.rs  panel.rs  panel_content.rs  popup.rs  window.rs
crates/nwg-common/: CHANGELOG.md  Cargo.toml  README.md
crates/nwg-common/src/: error.rs  launch.rs  lib.rs  process.rs  signals.rs  singleton.rs
crates/nwg-common/src/compositor/: null.rs  types.rs
crates/nwg-common/src/config/: paths.rs
crates/nwg-common/src/desktop/: categories.rs  entry.rs  icons.rs  mod.rs
crates/nwg-dock/: Cargo.toml
crates/nwg-dock-common/: Cargo.toml
crates/nwg-dock-common/src/: launch.rs  layer_shell.rs  lib.rs  pinning.rs  process.rs  signals.rs  singleton.rs
crates/nwg-dock-common/src/compositor/: hyprland.rs  mod.rs  null.rs  sway.rs  types.rs
crates/nwg-dock-common/src/compositor/sway/: events.rs  ipc.rs  mod.rs
crates/nwg-dock-common/src/config/: css.rs  flags.rs  mod.rs  paths.rs
crates/nwg-dock-common/src/desktop/: entry.rs  icons.rs  preferred_apps.rs
crates/nwg-dock-common/src/hyprland/: events.rs  types.rs
crates/nwg-dock/src/: config.rs  context.rs  dock_windows.rs  events.rs  listeners.rs  main.rs  monitor.rs  rebuild.rs  state.rs
crates/nwg-dock/src/ui/: buttons.rs  constants.rs  css.rs  dock_box.rs  dock_menu.rs  drag.rs  hotspot.rs  launch_bounce.rs  menus.rs  mod.rs  window.rs
crates/nwg-dock/src/ui/hotspot/: cursor_poller.rs  hotspot_windows.rs  mod.rs
crates/nwg-drawer/: Cargo.toml
crates/nwg-drawer/src/: config.rs  desktop_loader.rs  listeners.rs  main.rs  state.rs  watcher.rs
crates/nwg-drawer/src/assets/: drawer.css
crates/nwg-drawer/src/ui/: app_grid.rs  categories.rs  constants.rs  file_search.rs  math.rs  mod.rs  navigation.rs  pinned.rs  power_bar.rs  search_handler.rs  well_builder.rs  well_context.rs  widgets.rs  window.rs
crates/nwg-notifications/: Cargo.toml
crates/nwg-notifications/src/: config.rs  listeners.rs  main.rs  persistence.rs
crates/nwg-notifications/src/ui/: css.rs  dnd_menu.rs  icons.rs  notification_row.rs  panel.rs  panel_content.rs  popup.rs  window.rs
data/nwg-dock-hyprland/: style.css
docs/: nwg-dock-parity.md  rust-for-go-developers.md
docs/readme-drafts/: CLAUDE-nwg-common.md  CLAUDE-nwg-dock.md  CLAUDE-nwg-drawer.md  CLAUDE-nwg-notifications.md  mac-doc-hyprland.md  nwg-dock.md  nwg-notifications.md
docs/security-template/: .gitignore  CHECKLIST.md  README.md  SECURITY.md  sonar-project.properties
tests/integration/: CLASSIFICATION.md  test_runner.sh
