[workspace]
resolver = "2"
members = [
    "crates/nwg-dock-common",
    "crates/nwg-dock",
    "crates/nwg-drawer",
    "crates/nwg-notifications",
]

[workspace.package]
version = "0.2.0"
license = "MIT"
license-file = "LICENSE"
rust-version = "1.95"

[workspace.dependencies]
# GTK4 + Wayland layer shell
gtk4 = "0.10"
gtk4-layer-shell = "0.7"

# Serialization (Hyprland JSON IPC)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# File watching
notify = "8"

# Unix signals and process management
nix = { version = "0.31", features = ["signal", "process", "fs"] }

# Shell-aware command splitting (POSIX quoting rules)
shell-words = "1"

# Math expression evaluation (search bar calculator)
meval = "0.2"

# XDG directory resolution
dirs = "6"

# Internal crates
nwg-dock-common = { path = "crates/nwg-dock-common" }
