[package]
name = "dock-common"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = { workspace = true }
gtk4-layer-shell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
libc = "0.2"
dirs = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
