[package]
name = "nwg-common"
version.workspace = true
edition = "2024"
rust-version = "1.95"
license = "MIT"
description = "Shared library for nwg-dock, nwg-drawer, and nwg-notifications — compositor-neutral IPC abstraction for Hyprland and Sway, .desktop parsing, CSS hot-reload, and related system plumbing."
readme = "README.md"
# Placeholder — updated in Phase 1 of the monorepo split (#80) when this crate
# gets extracted to its own repo.
repository = "https://github.com/jasonherald/nwg-common"
keywords = ["hyprland", "sway", "wayland", "gtk4", "layer-shell"]
categories = ["gui", "config"]

[dependencies]
gtk4 = { workspace = true }
gtk4-layer-shell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
shell-words = { workspace = true }
nix = { workspace = true }
libc = "0.2"
dirs = { workspace = true }
notify = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
