[package]
name = "nwg-dock-common"
version.workspace = true
edition = "2024"
license.workspace = true
rust-version.workspace = true

[dependencies]
gtk4 = { workspace = true }
gtk4-layer-shell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
shell-words = { workspace = true }
nix = { workspace = true }
libc = "0.2"
dirs = { workspace = true }
notify = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
