[package]
name = "nwg-notifications"
version.workspace = true
edition = "2024"
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "nwg-notifications"
path = "src/main.rs"

[dependencies]
nwg-common = { workspace = true }
gtk4 = { workspace = true }
gtk4-layer-shell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
nix = { workspace = true }
libc = "0.2"
